---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2020-08-30
  Features:
    - Added stack size to item tooltips
    - Added `pumped by` to material page, which lists offshore pumps that produce that fluid
    - Added `rocket launch payloads` and `rocket launch products` to material page
    - Added rocket silos as crafters
      - Rocket silo crafters will display their required amount of rocket parts in their label and tooltip
    - Added fixed recipe to crafter tooltip if it has one
      - Shift + clicking a crafter with a fixed recipe will open that recipe's page
    - Added `purge-memoizer-cache` argument to the `/RecipeBook` command
  Changes:
    - Known "meta-recipes" (such as transport drones recipes used for requests) will no longer affect object availability
      - If there is a mod whose meta-recipes are not excluded, please let me know so I can exclude it
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2020-08-15
  Changes:
    - Updated to Factorio 1.0
  Bugfixes:
    - Fixed a crash due to improper checking of force availability data for crafters
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2020-08-10
  Features:
    - Added base crafting speed to recipe pages
    - Added character to "made in" list for recipes that are hand-craftable
    - Added brief interaction helps to all object tooltips
  Changes:
    - All recipe ingredients and products will always be shown despite object visibility settings
    - Renamed "machine" back to "crafter" as the reason for the name change is moot at this point
  Bugfixes: