@@ -53,6 +53,7 @@ hidden=Hidden
 history=History
 home=Home
 ingredient-in=Ingredient in (__1__)
+ingredients-tooltip=Ingredients:
 ingredients=Ingredients (__1__)
 item=Item
 keep-open=Keep open
@@ -64,6 +65,7 @@ offshore-pump=Offshore pump
 open-quick-reference=Open quick reference panel
 per-second= / s
 product-of=Product of (__1__)
+products-tooltip=Products:
 products=Products (__1__)
 pumped-by=Pumped by (__1__)
 pumping-speed=Pumping speed:
