@@ -87,7 +87,9 @@ function global_data.build_recipe_book()
     {dictionary="gui", internal="click_to_view", localised={"rb-gui.click-to-view"}},
     {dictionary="gui", internal="fixed_recipe", localised={"rb-gui.fixed-recipe"}},
     {dictionary="gui", internal="hidden", localised={"rb-gui.hidden"}},
+    {dictionary="gui", internal="ingredients_tooltip", localised={"rb-gui.ingredients-tooltip"}},
     {dictionary="gui", internal="per_second", localised={"rb-gui.per-second"}},
+    {dictionary="gui", internal="products_tooltip", localised={"rb-gui.products-tooltip"}},
     {dictionary="gui", internal="pumping_speed", localised={"rb-gui.pumping-speed"}},
     {dictionary="gui", internal="rocket_parts_required", localised={"rb-gui.rocket-parts-required"}},
     {dictionary="gui", internal="shift_click_to_view_fixed_recipe", localised={"rb-gui.shift-click-to-view-fixed-recipe"}},
