@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.1
 Date: ????
+  Features:
+    - Recipe ingredients and products are shown in their tooltip
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
